samples/_failures_safe/1761242513_e5a5a6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_25d8dc99.c: In function ‘main’:
./samples/SAFE/__tmp_25d8dc99.c:172:5: error: expected expression at end of input
  172 |     if (len >
      |     ^~
./samples/SAFE/__tmp_25d8dc99.c:172:5: error: expected declaration or statement at end of input
